--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,31 @@
+<build>
+<plugins>
 <dependency> 
 <groupId>org.hamcrest</groupId> 
 <artifactId>hamcrest-all</artifactId> 
 <version>1.3</version> 
 <scope>test</scope> 
 </dependency>
+<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-checkstyle-plugin</artifactId>
+<version>2.17</version>
+<executions>
+<execution>
+<id>validate</id>
+<phase>validate</phase>
+<configuration>
+<configLocation>checkstyle.xml</configLocation>
+<encoding>UTF-8</encoding>
+<consoleOutput>true</consoleOutput>
+<failsOnError>true</failsOnError>
+<includeTestSourceDirectory>true</includeTestSourceDirectory>
+</configuration>
+<goals>
+<goal>check</goal>
+</goals>
+</execution>
+</executions>
+</plugin>
+</plugins>
+</build>
